[package]
name = "egraph"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
ndarray = { version = "0.17.1", features = ["blas", "rayon"] }
ndarray-linalg = "0.18.0"
rand = "0.9.2"
smartcore = { version = "0.4.7", features = ["datasets", "std_rand"] }
