[package]
name = "egraph"
version = "0.1.0"
edition = "2024"
authors = ["Gaurav Sablok <codeprog@icloud.com>"]
description = "egraph for variant machine learning"
homepage = "https://github.com/rustcodepro/egraph"
repository = "https://github.com/rustcodepro/egraph"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
figlet-rs = "0.1.5"
ndarray = { version = "0.17.1", features = ["blas", "rayon"] }
ndarray-linalg = "0.18.0"
rand = "0.9.2"
rayon = "1.11.0"
smartcore = { version = "0.4.7", features = ["datasets", "std_rand"] }
